Fix: align the navigation items verticall middle using padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -622,7 +622,7 @@ footer{
 
 @media screen and (min-width: 992px) {
     #menubar li{
-        padding: 0.5rem 1.5rem;
+        padding: 10px 1.5rem 0;
     }
     li a{
         vertical-align: middle;
